Configure project for Jitpack